Fixed large file error

--- a/FirstML.ipynb
+++ b/FirstML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "id": "ab248125",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "id": "4b5d045e",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "id": "77756598",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "id": "5b4b3df3",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "75eb9eeb",
    "metadata": {},
    "outputs": [],
@@ -68,57 +68,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "id": "d58f5e32",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   time_id  volatility_feature\n",
-      "0        5            0.004499\n",
-      "1       11            0.001204\n",
-      "2       16            0.002369\n",
-      "3       31            0.002574\n",
-      "4       62            0.001894\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Now to caluclate realised volatility\n",
     "#I found HFT the mean should be considered 0 so i updated the formula to reflect th\\t\n",
     "def Realisedvol(x):\n",
     "    return np.sqrt(np.sum(x**2))\n",
     "\n",
-    "df_features = L_train.groupby('time_id').agg(volatility_feature=('log_returns',Realisedvol)).reset_index()\n",
-    "print(df_features.head())"
+    "df_features = L_train.groupby('time_id').agg(volatility_feature=('log_returns',Realisedvol)).reset_index()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "0a6628b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   stock_id  time_id    target  volatility_feature\n",
-      "0         0        5  0.004136            0.004499\n",
-      "1         0       11  0.001445            0.001204\n",
-      "2         0       16  0.002168            0.002369\n",
-      "3         0       31  0.002195            0.002574\n",
-      "4         0       62  0.001747            0.001894\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#creating a final dataframe for stock 0\n",
     "stock0_target = df_train[df_train['stock_id']==0]\n",
-    "df_final = pd.merge(stock0_target, df_features,on='time_id',how='inner')\n",
-    "print(df_final.head())"
+    "df_final = pd.merge(stock0_target, df_features,on='time_id',how='inner')\n"
    ]
   },
   {
@@ -127,7 +99,50 @@
    "id": "0b0d0609",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Now to implement Machine Learning\n",
+    "X=df_final['volatility_feature']]\n",
+    "Y=df_final['target']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "fe96a827",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000067 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 255\n",
+      "[LightGBM] [Info] Number of data points in the train set: 3064, number of used features: 1\n",
+      "[LightGBM] [Info] Start training from score 0.004053\n",
+      "Final Model Score (RMSPE): 0.35415977029204554\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Now split the data for training and testing\n",
+    "#traintestsplit test size is percent left for training and random states give the same randomness every time for testign\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y,test_size=0.2,random_state=42)\n",
+    "#initialise the model\n",
+    "model=lgb.LGBMRegressor()\n",
+    "model.fit(X_train,Y_train)\n",
+    "#Predictions in the test set\n",
+    "Y_pred = model.predict(X_test)\n",
+    "#Now the score Calculating\n",
+    "#Using RMS of percentage error\n",
+    "def rmspe(Y_true, Y_pred):\n",
+    "    return np.sqrt(np.mean(np.square((Y_true - Y_pred) / Y_true)))\n",
+    "score=rmspe(Y_test,Y_pred)\n",
+    "\n",
+    "print(f'Final Model Score (RMSPE): {score}')"
+   ]
   }
  ],
  "metadata": {
