--- a/FirstML.ipynb
+++ b/FirstML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 182,
    "id": "ab248125",
    "metadata": {},
    "outputs": [],
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 183,
    "id": "4b5d045e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Parsing Training documents\n",
-    "L_train = pd.read_parquet('book_train.parquet/stock_id=0')\n",
+    "L_train = pd.read_parquet('book_train.parquet/stock_id=101')\n",
     "df_train = pd.read_csv('train.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 184,
    "id": "77756598",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 185,
    "id": "5b4b3df3",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 186,
    "id": "75eb9eeb",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 187,
    "id": "d58f5e32",
    "metadata": {},
    "outputs": [],
@@ -83,31 +83,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 188,
    "id": "0a6628b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#creating a final dataframe for stock 0\n",
-    "stock0_target = df_train[df_train['stock_id']==0]\n",
-    "df_final = pd.merge(stock0_target, df_features,on='time_id',how='inner')\n"
+    "#creating a final dataframe for stock 1\n",
+    "stock1_target = df_train[df_train['stock_id']==101]\n",
+    "df_final = pd.merge(stock1_target, df_features,on='time_id',how='inner')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "id": "0b0d0609",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now to implement Machine Learning\n",
-    "X=df_final['volatility_feature']]\n",
+    "X=df_final[['volatility_feature']]\n",
     "Y=df_final['target']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 190,
    "id": "fe96a827",
    "metadata": {},
    "outputs": [
@@ -115,13 +115,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000067 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000035 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 255\n",
       "[LightGBM] [Info] Number of data points in the train set: 3064, number of used features: 1\n",
-      "[LightGBM] [Info] Start training from score 0.004053\n",
-      "Final Model Score (RMSPE): 0.35415977029204554\n"
+      "[LightGBM] [Info] Start training from score 0.004091\n",
+      "Final Model Score (RMSPE): 0.2382324968386333\n"
      ]
     }
    ],
